syntax = "proto3";

package people;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option java_package = "lv.nixx.poc.grpc.crud";
option java_outer_classname = "PeopleServiceProto";

// Если ну устанавливать эту настройку, то все файлы будут созданы внутри PeopleServiceProto класса
// option java_multiple_files = true;

message Person {
    int32 id = 1;
    string name = 2;
    string surname = 3;
    google.protobuf.Timestamp date_of_birth = 4;
}

message CreatePersonRequest {
    string name = 1;
    string surname = 2;
    google.protobuf.Timestamp date_of_birth = 3;
}

message GetPersonRequest {
    int32 id = 1;
}

message UpdatePersonRequest {
    Person person = 1;
}

message DeletePersonRequest {
    int32 id = 1;
}

message PersonResponse {
    Person person = 1;
}

message ListPersonsResponse {
    repeated Person people = 1;
}

service PeopleService {
    rpc CreatePerson(CreatePersonRequest) returns (PersonResponse);
    rpc GetPerson(GetPersonRequest) returns (PersonResponse);
    rpc ListPersons(google.protobuf.Empty) returns (ListPersonsResponse);
    rpc UpdatePerson(UpdatePersonRequest) returns (PersonResponse);
    rpc DeletePerson(DeletePersonRequest) returns (google.protobuf.Empty);
}